--- a/Views/Default/getMenu.cshtml
+++ b/Views/Default/getMenu.cshtml
@@ -4,7 +4,7 @@
     @foreach (var i in Model)
     {
         <li class="nav-item">
-            <a class="nav-link" href="#">@i.name</a>
+            <a class="nav-link" href="@i.meta">@i.name</a>
         </li>
     }
     <!--
