--- a/Views/Navigation/getMenu.cshtml
+++ b/Views/Navigation/getMenu.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<HoiTroWebsite.Models.Menu>
-
+﻿@model List<HoiTroWebsite.Models.Menu>
 <ul class="navbar-nav mr-auto">
     @foreach (var i in Model)
     {
