--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -32,9 +32,9 @@
 <!-- body -->
 <body class="main-layout">
     <!-- loader  -->
-    <div class="loader_bg">
+    @*<div class="loader_bg">
         <div class="loader"><img src="~/Content/images/loading.gif" alt="#" /></div>
-    </div>
+    </div>*@
     <!-- end loader -->
     <!-- header -->
     <header>
@@ -60,7 +60,7 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarsExample04">
                                 <!--Menu-->
-                                @{ Html.RenderAction("getMenu", "Default"); }
+                                @{ Html.RenderAction("getMenu", "Navigation"); }
                             </div>
                         </nav>
                     </div>
