--- a/Views/News/getNews.cshtml
+++ b/Views/News/getNews.cshtml
@@ -5,24 +5,7 @@
 
 @model List<HoiTroWebsite.Models.News>
 
-
-<div class="container">
-    Alooooooooooooooooooooooooooooo alibaba
-    @foreach (var i in Model)
-    {
-        <div class="row">
-            <div class="col-md-12">
-                <div class="@i.title">
-                    <h2>Tin Tức</h2>
-                    <p>@Html.DisplayFor(modelItem => i.content) </p>
-                </div>
-            </div>
-        </div>
-    }
-</div>
-
-<!-- blog -->
-@*<div class="blog">
+<div class="blog">
     <div class="row">
         <div class="col-md-12">
             <div class="titlepage">
@@ -32,42 +15,71 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
-            <div class="blog_box">
-                <div class="blog_img">
-                    <figure><img src="~/Content/images/blog1.jpg" alt="#" /></figure>
-                </div>
-                <div class="blog_room">
-                    <h3>Bed Room</h3>
-                    <span>The standard chunk </span>
-                    <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="blog_box">
-                <div class="blog_img">
-                    <figure><img src="~/Content/images/blog2.jpg" alt="#" /></figure>
-                </div>
-                <div class="blog_room">
-                    <h3>Bed Room</h3>
-                    <span>The standard chunk </span>
-                    <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
+        @foreach (var i in Model)
+        {
+            <div class="col-md-4">
+                <div class="blog_box">
+                    <div class="blog_img">
+                        @*<figure><img src="~/Content/images/blog3.jpg" alt="#" /></figure>*@
+                    </div>
+                    <div class="blog_room">
+                        <h3>@i.title</h3>
+                        <span>@i.author </span>
+                        <p>@Html.DisplayFor(modelItem => i.content)</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="blog_box">
-                <div class="blog_img">
-                    <figure><img src="~/Content/images/blog3.jpg" alt="#" /></figure>
-                </div>
-                <div class="blog_room">
-                    <h3>Bed Room</h3>
-                    <span>The standard chunk </span>
-                    <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
-                </div>
-            </div>
-        </div>
+        }
+
     </div>
-</div>*@
+</div>*
+<!-- blog -->
+@*<div class="blog">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="titlepage">
+                    <h2>Blog</h2>
+                    <p>Lorem Ipsum available, but the majority have suffered </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="blog_box">
+                    <div class="blog_img">
+                        <figure><img src="~/Content/images/blog1.jpg" alt="#" /></figure>
+                    </div>
+                    <div class="blog_room">
+                        <h3>Bed Room</h3>
+                        <span>The standard chunk </span>
+                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="blog_box">
+                    <div class="blog_img">
+                        <figure><img src="~/Content/images/blog2.jpg" alt="#" /></figure>
+                    </div>
+                    <div class="blog_room">
+                        <h3>Bed Room</h3>
+                        <span>The standard chunk </span>
+                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="blog_box">
+                    <div class="blog_img">
+                        <figure><img src="~/Content/images/blog3.jpg" alt="#" /></figure>
+                    </div>
+                    <div class="blog_room">
+                        <h3>Bed Room</h3>
+                        <span>The standard chunk </span>
+                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>*@
 <!-- end blog -->
