--- a/Views/Default/Index.cshtml
+++ b/Views/Default/Index.cshtml
@@ -63,164 +63,12 @@
     </div>
 </section>
 <!-- end banner -->
-<!-- about -->
-<div class="about">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="titlepage">
-                    <h2>About Us</h2>
-                    <p>The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
-                    <a class="read_more" href="Javascript:void(0)"> Read More</a>
-                </div>
-            </div>
-            <div class="col-md-7">
-                <div class="about_img">
-                    <figure><img src="~/Content/images/about.png" alt="#" /></figure>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end about -->
-<!-- our_room -->
-<div class="our_room">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Our Room</h2>
-                    <p>Lorem Ipsum available, but the majority have suffered </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room1.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room2.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room3.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room4.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room5.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div id="serv_hover" class="room">
-                    <div class="room_img">
-                        <figure><img src="~/Content/images/room6.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end our_room -->
-<!-- gallery -->
-<div class="gallery">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>gallery</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery1.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery2.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery3.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery4.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery5.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery6.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery7.jpg" alt="#" /></figure>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="gallery_img">
-                    <figure><img src="~/Content/images/gallery8.jpg" alt="#" /></figure>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end gallery -->
-
+<!--room information-->
+@{ Html.RenderAction("getRoomType", "HomePage"); }
+<!--end room information-->
+<!--news-->
+@{ Html.RenderAction("getNews", "HomePage"); }
+<!--end news-->
 <!--  contact -->
 <div class="contact">
     <div class="container">
