--- a/Views/HomePage/getInfor.cshtml
+++ b/Views/HomePage/getInfor.cshtml
@@ -10,7 +10,8 @@
                             <figure><img src="@i.ImagePath" alt="#" /></figure>
                         </div>
                         <div class="bed_room" style="font-family:'Times New Roman';">
-                            <a href="/@ViewBag.meta/@i.Meta/@i.ID">@i.Title</a>
+                            <a href="/@ViewBag.meta/@i.Meta/@i.ID" style="font-family:'Times New Roman', Times, serif; font-size:larger;">@i.Title</a>
+                            <br />
                             <b style="color: orangered; font-size: large;">@i.Price</b>
                             <span>@i.Acreage</span>
                             <p>@i.Area</p>
