--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/style.css">
+    <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
     <!-- fevicon -->
@@ -37,9 +38,9 @@
     </div>*@
     <!-- end loader -->
     <!-- header -->
-    <header>
+    @*<header>*@
         <!-- header inner -->
-        <div class="header">
+        @*<div class="header">*@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
@@ -66,8 +67,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
+        @*</div>*@
+
     <div class="content">
         @RenderBody();
     </div>
