--- a/Views/Default/Index.cshtml
+++ b/Views/Default/Index.cshtml
@@ -64,10 +64,10 @@
 </section>
 <!-- end banner -->
 <!--room information-->
-@{ Html.RenderAction("getRoomType", "HomePage"); }
+@*@{ Html.RenderAction("getRoomType", "HomePage"); }*@
 <!--end room information-->
 <!--news-->
-@{ Html.RenderAction("getNews", "HomePage"); }
+@*@{ Html.RenderAction("getNews", "HomePage"); }*@
 <!--end news-->
 <!--  contact -->
 <div class="contact">
