--- a/Views/HomePage/Index.cshtml
+++ b/Views/HomePage/Index.cshtml
@@ -69,10 +69,10 @@
 </section>
 <!-- end banner -->
 <!--room information-->
-@{ Html.RenderAction("getRoomType", "HomePage"); }
+@*@{ Html.RenderAction("getRoomType", "HomePage"); }*@
 <!--end room information-->
 <!--news-->
-@{ Html.RenderAction("getNewsType", "HomePage"); }
+@*@{ Html.RenderAction("getNewsType", "HomePage"); }*@
 <!--end news-->
 <!--  contact -->
 <div class="contact">
