--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -26,6 +26,7 @@
 @import url(jquery.fancybox.min.css);
 @import url(jquery-ui.css);
 @import url(nice-select.css);
+@import url(my-css.css);
 
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
@@ -134,7 +135,8 @@ ol {
 p {
      margin: 0px;
      font-weight: 500;
-     font-size: 15px;
+     /* font-size: 15px; */
+     font-size: 14px;
      line-height: 24px;
 }
 
@@ -257,33 +259,38 @@ button {
 
 .navigation.navbar {
      float: right;
-     padding-top: 14px !important;
-     padding: 0;
+     /* padding-top: 14px !important; */
+     padding: 0px 0 0px 0;
 }
 
 .navigation.navbar-dark .navbar-nav .nav-link {
-     padding: 7px 0px 27px 0px;
+     padding: 17px 0px 17px 0px;
      margin: 0 22px;
-     color: #010101;
+     /* color: #010101; */
+     color: #fff;
      font-size: 16px;
      line-height: 20px;
      font-weight: 500;
      text-transform: uppercase;
-     border-bottom: #fff solid 3px;
+     /* border-bottom: #fff solid 3px; */
 }
 
-.navigation.navbar-dark .navbar-nav .nav-link:focus,
+/* .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
      color: #fe0000;
      border-bottom: #fe0000 solid 3px;
-}
+     color: #fff;
+     background-color: #000;
+} */
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #fe0000;
-     border-bottom: #fe0000 solid 3px;
+     background-color: var(--black--color);
+     color: #fff;
+     /* color: #fe0000;
+     border-bottom: #fe0000 solid 3px; */
 }
 
 .navbar-expand-md .navbar-nav {
@@ -302,7 +309,6 @@ button {
 
 .banner_main {
      position: relative;
-     margin-top: 100px;
 }
 
 .banner .carousel-indicators li {
@@ -936,7 +942,6 @@ line-height: 35px;
      margin:0 !important;
 }
 
-
 .inner_page .gallery {
      padding-top: 90px;
 }
@@ -949,6 +954,3 @@ line-height: 35px;
     color: red;
     background-color: blue;
 }
-
-
-
