--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -19,55 +19,40 @@
     <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
+    <!-- my css-->
+    <link rel="stylesheet" href="~/Content/css/my-css.css"/>
     <!-- fevicon -->
     <link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="~/Content/css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <!-- body -->
 <body class="main-layout">
+
     <!-- loader  -->
     @*<div class="loader_bg">
-        <div class="loader"><img src="~/Content/images/loading.gif" alt="#" /></div>
-    </div>*@
+            <div class="loader"><img src="~/Content/images/loading.gif" alt="#" /></div>
+        </div>*@
     <!-- end loader -->
-    <!-- header -->
-    @*<header>*@
-        <!-- header inner -->
-        @*<div class="header">*@
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                        <div class="full">
-                            <div class="center-desk">
-                                <div class="logo">
-                                    <a href="index.html"><img src="~/Content/images/logo.png" alt="#" /></a>
-                                </div>
-                            </div>
+
+    <!-- logo và đăng ký, đăng nhập -->
+    <div class="container header">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                <div class="full">
+                    <div class="center-desk">
+                        <div class="logo">
+                            <a href="index.html"><img src="images/logo.png" alt="#" /></a>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                        <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarsExample04">
-                                <!--Menu-->
-                                @{ Html.RenderAction("getMenu", "Navigation"); }
-                            </div>
-                        </nav>
-                    </div>
-                </div>
             </div>
-        @*</div>*@
+        </div>
+    </div>
+    <!-- end logo và đăng ký, đăng nhập -->
+
+    @*thanh menu*@
+    @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
 
     <div class="content">
         @RenderBody();
