--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -15,12 +15,12 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
     <!-- style css -->
-    <link rel="stylesheet" href="~/Content/css/style.css">
-    <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
+    <link rel="stylesheet" href="~/Content/css/style_config.css">
+    @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
     <!-- my css-->
-    <link rel="stylesheet" href="~/Content/css/my-css.css"/>
+    <link rel="stylesheet" href="~/Content/css/my-css.css" />
     <!-- fevicon -->
     <link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
@@ -34,7 +34,6 @@
             <div class="loader"><img src="~/Content/images/loading.gif" alt="#" /></div>
         </div>*@
     <!-- end loader -->
-
     <!-- logo và đăng ký, đăng nhập -->
     <div class="container header">
         <div class="row">
@@ -51,8 +50,11 @@
     </div>
     <!-- end logo và đăng ký, đăng nhập -->
 
-    @*thanh menu*@
-    @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
+    <!-- phần navigation bar -->
+    <div id="menu-bar">
+        @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
+    </div>
+    <!-- kết thúc navigation bar -->
 
     <div class="content">
         @RenderBody();
