--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>keto</title>
+    <title>@ViewBag.Title</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -16,11 +16,10 @@
     <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/style_config.css">
+    <link rel="stylesheet" href="~/Content/css/my-css.css" />
     @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
-    <!-- my css-->
-    <link rel="stylesheet" href="~/Content/css/my-css.css" />
     <!-- fevicon -->
     <link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
@@ -41,7 +40,7 @@
                 <div class="full">
                     <div class="center-desk">
                         <div class="logo">
-                            <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                            <a href="index.html"><img src="~/Content/images/logo.png" alt="#" /></a>
                         </div>
                     </div>
                 </div>
@@ -59,6 +58,7 @@
     <div class="content">
         @RenderBody();
     </div>
+
     <footer>
         <div class="footer">
             <div class="container">
