--- a/Views/Button/getPost.cshtml
+++ b/Views/Button/getPost.cshtml
@@ -139,15 +139,11 @@
                         <select class="form-control" id="post_cat" name="loai_chuyen_muc" required="" data-msg-required="Chưa chọn loại chuyên mục">
                             <option value="">-- Chọn loại chuyên mục --</option>
 
-                            <option value="1">Phòng trọ, nhà trọ</option>
-                            <option value="2">Nhà thuê nguyên căn</option>
-                            <optgroup label="Căn hộ">
-                                <option value="3">Cho thuê căn hộ</option>
-                                <option value="6">Cho thuê căn hộ mini</option>
-                                <option value="7">Cho thuê căn hộ dịch vụ</option>
-                            </optgroup>
+                            <option value="1">Phòng trọ cho thuê</option>
+                            <option value="2">Nhà cho thuê</option>
+                            <option value="3">Căn hộ cho thuê</option>
                             <option value="4">Tìm người ở ghép</option>
-                            <option value="5">Cho thuê mặt bằng + Văn phòng</option>
+
                         </select>
                     </div>
                 </div>
@@ -287,7 +283,7 @@
 
                 <div class="form-group row mt-5">
                     <div class="col-md-12">
-                        <button type="submit" class="btn btn-success mb-5 btn-lg btn-block js-btn-hoan-tat">Tiếp tục</button>
+                        <button type="submit" class="btn btn-success mb-5 btn-lg btn-block js-btn-hoan-tat">Đăng tin</button>
                     </div>
                 </div>
 
