--- a/Views/HomePage/getNewsType.cshtml
+++ b/Views/HomePage/getNewsType.cshtml
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2><a href="@ViewBag.meta/@i.meta">@i.title</a></h2>
+                        <h2><a href="@ViewBag.meta/@i.meta" style="color: white;">@i.title</a></h2>
                         <p>Lorem Ipsum available, but the majority have suffered </p>
                     </div>
                 </div>
