--- a/Views/News/getNews.cshtml
+++ b/Views/News/getNews.cshtml
@@ -1,70 +1,21 @@
-﻿@model List<HoiTroWebsite.Models.NewsViewModel>
+﻿@model List<HoiTroWebsite.Models.News>
 
-    @foreach (var i in Model)
-    {
-        <div class="col-md-4">
-            <div class="blog_box">
-                <div class="blog_img">
-                    <figure><img src="@i.ImagePath" alt="#" /></figure>
-                </div>
-                <div class="blog_room" style="font-family:'Times New Roman';">
-                    @*<a href="@Url.Action("Detail", "News", new { id = i.ID, metatitle = i.Meta })">Chi tiết phòng</a>*@
+@foreach (var i in Model)
+{
+    <div class="col-md-4">
+        <div class="blog_box">
+            <div class="blog_img">
+                <figure><img src="@i.imagePath" alt="#" /></figure>
+            </div>
+            <div class="blog_room" style="font-family:'Times New Roman';">
+                @*<a href="@Url.Action("Detail", "News", new { id = i.ID, metatitle = i.Meta })">Chi tiết phòng</a>*@
 
-                    <a href="/@ViewBag.meta/@i.Meta/@i.ID">@i.Title</a>
-                    <span>@i.Author </span>
-                    <p style="font-style:italic">@Html.DisplayFor(modelItem => i.BriefDescription)</p>
-                </div>
+                <a href="/@ViewBag.meta/@i.meta/@i.id">@i.title</a>
+                <span>Tác giả: @i.author </span>
+                <p style="font-style:italic">
+                    @Html.Raw(i.brief_description.Length > 200 ? i.brief_description.Substring(0, 200) + "..." : i.brief_description)
+                </p>
             </div>
         </div>
-    }
-
-<!-- blog -->
-@*<div class="blog">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="titlepage">
-                    <h2>Blog</h2>
-                    <p>Lorem Ipsum available, but the majority have suffered </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="blog_box">
-                    <div class="blog_img">
-                        <figure><img src="~/Content/images/blog1.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="blog_room">
-                        <h3>Bed Room</h3>
-                        <span>The standard chunk </span>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="blog_box">
-                    <div class="blog_img">
-                        <figure><img src="~/Content/images/blog2.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="blog_room">
-                        <h3>Bed Room</h3>
-                        <span>The standard chunk </span>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="blog_box">
-                    <div class="blog_img">
-                        <figure><img src="~/Content/images/blog3.jpg" alt="#" /></figure>
-                    </div>
-                    <div class="blog_room">
-                        <h3>Bed Room</h3>
-                        <span>The standard chunk </span>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorsIf you are   </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>*@
-<!-- end blog -->
+    </div>
+}
