--- a/Views/RoomInfo/getInfor.cshtml
+++ b/Views/RoomInfo/getInfor.cshtml
@@ -11,10 +11,13 @@
             </div>
             <div class="bed_room" style="font-family:'Times New Roman';">
                 <a href="/@ViewBag.meta/@i.Meta/@i.ID" >@i.Title</a>
+                <br />
                 <b style="color: orangered; font-size: large;">@i.Price</b>
                 <span>@i.Acreage</span>
                 <p>@i.Area</p>
-                <p style="font-style:italic">@Html.DisplayFor(modelItem => i.BriefDescription)</p>
+                <p style="font-style:italic">
+                    @Html.Raw(i.BriefDescription.Length > 200 ? i.BriefDescription.Substring(0, 200) + "..." : i.BriefDescription)
+                </p>
             </div>
         </div>
     </div>
