--- a/Views/News/NewsDetail.cshtml
+++ b/Views/News/NewsDetail.cshtml
@@ -1,18 +1,16 @@
 ﻿@model HoiTroWebsite.Models.News
 
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "NewsDetail";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
+
 @Styles.Render("~/Content/css")
 @Scripts.Render("~/Scripts/js")
 
 
 <div id="left-col">
     <article class="the-article">
-        <div id="breadcrumb">
-            
-        </div>
         <header class="page-header">
             <h1 class="page-h1">@Model.title</h1>
         </header>
@@ -21,7 +19,7 @@
         </div>
         <div class="article-main-content">
             <figure style="text-align: center;">
-                <img src="" alt="@Model.title" width="960" height="720">
+                <img src="@Model.imagePath" alt="@Model.title" width="960" height="720">
                 <figcaption>
                     <em>@Model.title</em>
                 </figcaption>
@@ -29,7 +27,10 @@
             <div>@Html.Raw(Model.detail_description)</div>
         </div>
         <div class="article-tags">
-            <span>Từ khóa:</span>@Model.NewsType.title</span></div>
+            <span>Từ khóa:@Model.</span>
+        </div>
+        <span>Tác giả:@Model.author</span>
+</div>
         </div>
     </article>
 </div>
