--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/style.css">
+    <link rel="stylesheet" href="~/Content/css/style_room.css">
     <link rel="stylesheet" href="~/Content/css/style_dangtin.css">
+    <link rel="stylesheet" href="~/Content/css/style_signinsignout.css">
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css">
     <!-- fevicon -->
