--- a/Content/css/style-config.css
+++ b/Content/css/style-config.css
@@ -45,7 +45,8 @@ html {
 body {
      color: #666666;
      font-size: 14px;
-     font-family: 'Poppins', sans-serif;
+     /* font-family: 'Poppins', sans-serif; */
+     font-family: Arial, Helvetica, sans-serif;
      line-height: 1.80857;
      font-weight: normal;
 }
