--- a/Views/News/NewsDetail.cshtml
+++ b/Views/News/NewsDetail.cshtml
@@ -27,7 +27,7 @@
             <div>@Html.Raw(Model.detail_description)</div>
         </div>
         <div class="article-tags">
-            <span>Từ khóa:@Model.</span>
+            <span>Từ khóa:@Model.NewsType.title</span>
         </div>
         <span>Tác giả:@Model.author</span>
 </div>
