--- a/Views/Navigation/getMenu.cshtml
+++ b/Views/Navigation/getMenu.cshtml
@@ -3,7 +3,7 @@
     @foreach (var i in Model)
     {
         <li class="nav-item">
-            <a class="nav-link" href="@i.meta">@i.name</a>
+            <a class="nav-link" href="/@i.meta">@i.name</a>
         </li>
     }
     <!--
