--- a/Views/HomePage/getRoomType.cshtml
+++ b/Views/HomePage/getRoomType.cshtml
@@ -1,22 +1,23 @@
 ﻿@model List<HoiTroWebsite.Models.RoomType>
 
-<div class="our_room">
-    <div class="container">
-        @foreach (var i in Model)
-        {
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2><a href="@ViewBag.meta/@i.meta">@i.title</a></h2>
-                        <p>Lorem Ipsum available, but the majority have suffered </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                @Html.Action("getInfor", "HomePage", new { id = @i.id, metatitle = @ViewBag.meta })
-            </div>
-        }
-
-    </div>
-</div>
+@foreach (var i in Model)
+{
+    <section class="category-section">
+        <div class="category-title h4">
+            <a href="@ViewBag.meta/@i.meta">@i.title"</a>
+        </div>
+        <ul class="post-list">
+            @Html.Action("getInfor", "HomePage", new { id = @i.id, metatitle = @ViewBag.meta })
+        </ul>
+    </section>
+}
 <!-- end our_room -->
+
+@*<section class="category-section">
+    <div class="category-title h4">
+        <a href="@ViewBag.meta/@i.meta">@i.title">Phòng trọ, nhà trọ</a>
+    </div>
+    <ul class="post-list">
+        @Html.Action("getInfor", "HomePage", new { id = @i.id, metatitle = @ViewBag.meta })
+    </ul>
+</section>*@
