--- a/Views/News/getNewsType.cshtml
+++ b/Views/News/getNewsType.cshtml
@@ -11,8 +11,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>@i.title</h2>
-                        <p>Lorem Ipsum available, but the majority have suffered </p>
+                        <h2><a href="@ViewBag.meta/@i.meta" style="color: white;">@i.title</a></h2>
                     </div>
                 </div>
             </div>
