--- a/Views/RoomInfo/getInfor.cshtml
+++ b/Views/RoomInfo/getInfor.cshtml
@@ -4,22 +4,55 @@
 
 @foreach (var i in Model)
 {
-    <div class="col-md-4 col-sm-6">
-        <div id="serv_hover" class="room">
-            <div class="room_img">
-                <figure><img src="@i.ImagePath" alt="#" /></figure>
+    <li class="post-item post-id-649687 style-4 clearfix post-vip vipnoibat" style="border-color: #e13427"
+        post-id="649687">
+        <figure class="post-thumb">
+            <a class="clearfix"
+               href="/chinh-chu-cho-thue-phong-tro-duong-ung-van-khiem-quan-binh-thanh-pr649687.html">
+                <img class="img-thumb"
+                     src="@i.ImagePath"
+                     @*data-src="https://pt123.cdn.static123.com/images/thumbs/450x300/fit/2024/03/29/2_1711684797.jpg"*@
+                     alt="@i.RoomInfo.title" />
+            </a>
+            <span class="images-number">14 ảnh</span>
+            <span class="has-video"></span>
+            <span class="chothuenhanh-label"></span>
+            <span class="post-save js-btn-save" data-post-id="649687"><i></i></span>
+        </figure>
+        <div class="post-meta">
+            <h3 class="post-title">
+                <a style="color: #e13427"
+                   href="/@ViewBag.meta/@i.RoomInfo.meta/@i.RoomInfo.id">
+                    @i.RoomInfo.title
+                </a>
+            </h3>
+            <div class="meta-row clearfix">
+                <span class="post-price">@i.RoomInfo.price tr VNĐ/tháng</span><span class="post-acreage">@i.RoomInfo.acreage m²</span>
+                <span class="post-location">
+                    <a href="">
+                        @i.RoomInfo.area
+                    </a>
+                </span>
+                <time class="post-time" title="Thứ 7, 15:21 05/10/2024">1 ngày trước</time>
             </div>
-            <div class="bed_room" style="font-family:'Times New Roman';">
-                <a href="/@ViewBag.meta/@i.Meta/@i.ID" >@i.Title</a>
-                <br />
-                <b style="color: orangered; font-size: large;">@i.Price</b>
-                <span>@i.Acreage</span>
-                <p>@i.Area</p>
-                <p style="font-style:italic">
-                    @Html.Raw(i.BriefDescription.Length > 200 ? i.BriefDescription.Substring(0, 200) + "..." : i.BriefDescription)
+            <div class="meta-row clearfix">
+                <p class="post-summary">
+                    @Html.Raw(i.RoomInfo.brief_description.Length > 200 ? i.RoomInfo.brief_description.Substring(0, 200) + "..." : i.RoomInfo.brief_description)
                 </p>
             </div>
+            <div class="meta-row clearfix">
+                <div class="post-author">
+                    <img src="" />
+                    <span class="author-name">@i.RoomInfo.nameInfor</span>
+                </div>
+                <a rel="nofollow" target="_blank" href="https://zalo.me/@i.RoomInfo.zaloInfor"
+                   class="btn-quick-zalo">Nhắn Zalo</a>
+                <a rel="nofollow" target="_blank" href="tel:@i.RoomInfo.phoneInfor" class="btn-quick-call">
+                    Gọi
+                    @i.RoomInfo.phoneInfor
+                </a>
+            </div>
         </div>
-    </div>
+    </li>
 }
 <!-- end our_room -->
