--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -37,36 +37,29 @@
     <!-- end loader -->
 
     <!-- logo và đăng ký, đăng nhập -->
-    <div class="container header">        
-            <div class="logo_section" style="float: left">
-                <div class="full">
-                    <div class="center-desk">
-                        <div class="logo">
-                            <a href="index.html"><img src="~/Content/images/logo.png" alt="#" /></a>
-                        </div>
+    <div class="container header">
+        <div class="logo_section" style="float: left">
+            <div class="full">
+                <div class="center-desk">
+                    <div class="logo">
+                        <a href="index.html"><img src="~/Content/images/logo.png" alt="#" /></a>
                     </div>
                 </div>
             </div>
-            <div class="user-welcome clearfix js-reload-html-header" style="float: right">
-                <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon heart size-18"></i> Yêu thích <span class="number-count js-save-post-total hidden" style="display: none;">1</span></a>
-                <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon register"></i> Đăng nhập</a>
-                <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon login"></i> Đăng ký</a>
-                <a rel="nofollow" class="btn btn-add-post" href="javascript:void(0)"><i></i>Đăng tin miễn phí</a>
-            </div>
+        </div>
+        <div class="user-welcome clearfix js-reload-html-header" style="float: right">
+            <a rel="nofollow" class="btn" href="javascript:void(0)"><i class="icon heart size-18"></i> Yêu thích <span class="number-count js-save-post-total hidden" style="display: none;">1</span></a>
+            <a rel="nofollow" class="btn" href="dang-nhap"><i class="icon register"></i> Đăng nhập</a>
+            <a rel="nofollow" class="btn" href="dang-ky"><i class="icon login"></i> Đăng ký</a>
+            <a rel="nofollow" class="btn btn-add-post" href="dang-tin-moi"><i></i>Đăng tin miễn phí</a>
+        </div>
     </div>
     <!-- end logo và đăng ký, đăng nhập -->
-
     <!-- phần navigation bar -->
     <div id="menu-bar">
         @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
     </div>
     <!-- kết thúc navigation bar -->
-
-    <!-- thanh tìm kiếm -->
-    <div id="search-bar">
-        @{ Html.RenderAction("GetSearchBar", "MainPartial"); }
-    </div>
-    <!-- kết thúcthanh tìm kiếm -->
 
     <div class="content">
         @RenderBody();
